# PhytoSense

./: .replit  analyses.json  app.py  crop_data.py  crop_database.py  crop_suggestion_helper.py  db_adapter.py  farmer_history.json  image_processing.py  krishimitra.py  language_support.py  local_db.py  maharashtra.py  model.py  model_handler.py  mongo_config.py  mongo_db.py  plant_analysis.py  profile_utils.py  profiles.json  pyproject.toml  recommendations.py  replit.nix  requirements.txt  soil_analyzer.py  test_empty_location.py  test_location_fix.py  testing.py  users.json  utils.py  weather_data_store.py  weather_service.py
.streamlit/: custom.css
attached_assets/: CABBAGE.docx  COTTONDATA.docx  Cluster Beans (Gawar)_Copy.docx  LadyfingeR.docx  ONIONDATA.docx  Pomegranate_Copy.docx  SOYABEANDATA.docx  TOMATODATA.docx  app.py  config.toml  crop_database (1).py  custom.css  database.py  db_adapter.py  image_processing.py  language_support.py  local_db.py  maharashtra.py  model.py  model_handler.py  plant_analysis.py  potato.docx  profile_utils.py  recommendations.py  resources.py  soil_analyzer.py  styles.py  utils.py  watermelon.docx  weather_service.py
translations/: hi.json  mr.json
weather_data/: weather_cache.json
